@@ -21,6 +21,10 @@ BUG FIXES:
 - Checking headers of OH formulas for missing trailing string "##",
   which caused incorrect array indices and crashes. 
   Trying to continue gracefully. (TheHighFish)	
+  
+- Possible buffer overflow with reading of window title text has been corrected in
+  scraper.h and scraper.cpp (OpenHoldem)
+  
 
 MAINTENANCE: 
 - A single OpenHoldem Formula file (*.ohf) instead of *.whf and *.whx.
@@ -33,6 +37,9 @@ MAINTENANCE:
   f$delay and f$chat became standard functions, as they could have 
   a greater impact on the behaviour of bots. 
   Slightly modified default bot to reflect this change. (TheHighFish) 
+  
+- Added parameter validity checking on all functions in scraper.cpp.
+  (OpenHoldem)
 
 
 v1.9.0 2008-05-16
